@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'skinparam linetype orto

skinparam classAttributeIconSize 0



class AuthenticationRepository {
    + getCurrentUserSession()
}

class Employee {
    + getGreenSpacesManagedByMe()
    + createTask(title, description, selectedGreenSpace, selectedUrgency, duration)
    + validateTask(Task)
    + addTask(Task)
}

class EmployeeRepository {
    + getEmployeeByUserID(userID)
}

class Organization {
    + anyUserHasId(userID)
}

class OrganizationRepository {
    + getOrganizationByUserID(userID)
}

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getAuthenticationRepository()
    + getEmployeeRepository()
    + getOrganizationRepository()
}

class ToDoListController {
    + ToDoListController()
    + getUserFromSession()
    + getAvailableGreenSpaces()
    + addNewTask(title, description, selectedGreenSpace, selectedUrgency, duration)
}

class ToDoListUI {
}

class GreenSpaces {
    + getGreenSpacesManagedByMe()
}

class Task {
    + create(Task instance)
}

note left of ToDoListController
    - userEmail and userRole is obtained
    from the user session.
end note

Repositories -> Repositories : instance
ToDoListUI .> ToDoListController
ToDoListController .> Repositories : repositories
Repositories --> "1" AuthenticationRepository
Repositories --> "1" EmployeeRepository
Repositories --> "1" OrganizationRepository
EmployeeRepository "1" --> "*" Employee : stores
OrganizationRepository "1" --> "*" Organization : stores
Employee --> "1" GreenSpaces : manages
Employee --> "*" Task : has

@enduml